--- a/casino/landing-a_index.html
+++ b/casino/landing-a_index.html
@@ -8,107 +8,9 @@
 <meta content="입플/보너스/페이백 혜택 + 배당 마진·EV 분석기로 빠르게 비교하세요." name="description"/>
 <link href="https://88st.cloud/landing-a/" rel="canonical"/>
 <meta content="noindex,follow" name="robots"/>
-<style>
-*{box-sizing:border-box}
-body{margin:0;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,system-ui;background:#0b0b0b;color:var(--text)}
-.wrap{max-width:980px;margin:0 auto;padding:18px 14px 28px}
-.hero{background:rgba(18,18,18,.9);border:1px solid rgba(255,255,255,.06);border-radius:18px;padding:16px;box-shadow:0 10px 26px rgba(0,0,0,.45)}
-.h-title{font-weight:900;color:#f5e27a;font-size:18px;line-height:1.25;margin:0}
-.h-sub{margin:10px 0 0;color:#cfcfcf;font-size:13px;line-height:1.6}
-.cta{display:flex;gap:10px;flex-wrap:wrap;margin-top:12px}
-.btn{flex:1;min-width:190px;border:none;border-radius:14px;padding:12px;font-weight:900;cursor:pointer;text-decoration:none;display:block;text-align:center}
-.primary{background:linear-gradient(135deg,#1da1f2,#78d6ff);color:#00121a}
-.secondary{background:#1f1f1f;color:var(--text);border:1px solid rgba(255,255,255,.08)}
-.section{margin-top:14px;background:rgba(18,18,18,.85);border:1px solid rgba(255,255,255,.06);border-radius:18px;padding:14px;box-shadow:0 10px 26px rgba(0,0,0,.45)}
-.s-title{font-weight:900;color:#f5e27a;font-size:14px;margin:0 0 10px}
-.mini-row{display:grid;grid-template-columns:repeat(3,1fr);gap:10px}
-@media(max-width:760px){.mini-row{grid-template-columns:1fr}}
-.mini-card{position:relative;background:rgba(0,0,0,.25);border:1px solid rgba(255,255,255,.08);border-radius:14px;padding:12px;cursor:pointer;overflow:hidden}
-.mini-badge{display:inline-block;padding:4px 8px;border-radius:999px;font-weight:900;font-size:11px;margin-bottom:8px;color:#111;background:linear-gradient(135deg,#d4af37,#f5e27a)}
-.mini-badge.ad{background:rgba(255,255,255,.14);color:var(--text);border:1px solid rgba(255,255,255,.14)}
-.mini-name{font-weight:900}
-.mini-sub{margin-top:6px;font-size:12px;color:#cfcfcf;line-height:1.4}
-.footer{margin-top:14px;color:#9a9a9a;font-size:12px;line-height:1.55;text-align:center}
-</style>
-<style id="v13_1_theme_override">
-/* === v13.1 look unify (from main index) === */
-:root{
-  /* unify accent (blue) */
-  --accent1:#d4af37;
-  --accent2:#f5e27a;
-  --accentRGB:212,175,55;  /* for rgba(var(--accentRGB), .xx) */
-  --accentText:#00121a;
-  --accentOn:#00121a;
 
-  /* unify tokens */
-  --bg:#f5f6f8;
-  --panel:rgba(255,255,255,.92);
-  --glassA:.72;
-  --glassStrongA:.86;
-  --glassSoftA:.18;
-  --glassBorder:rgba(18,20,28,.10);
 
-  /* backward compat */
-  --gold: var(--accent1);
-  --gold2: var(--accent2);
-}
-
-/* premium midnight background */
-body{
-  background:
-    radial-gradient(1200px 620px at 50% -10%, rgba(var(--accentRGB),.18), transparent 58%),
-    radial-gradient(900px 540px at 15% 25%, rgba(120,170,255,.10), transparent 55%),
-    radial-gradient(900px 640px at 85% 35%, rgba(80,140,255,.08), transparent 55%),
-    linear-gradient(180deg, #05060b 0%, #060612 60%, #040408 100%) !important;
-  color:var(--text);
-  font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,system-ui;
-}
-
-/* remove small label badges (TODAY/MAIN/NEW...) */
-.title .badge,
-.section-title .badge,
-h1 .badge,
-h2 .badge,
-h3 .badge{ display:none !important; }
-
-/* panel unification (safe selectors) */
-.section, .panel, .box, .card, .wrap, .container, .hero, header{
-  backdrop-filter: blur(16px);
-  -webkit-backdrop-filter: blur(16px);
-}
-
-/* inputs */
-input, select, textarea{
-  background: rgba(0,0,0,.28) !important;
-  border:1px solid rgba(255,255,255,.14) !important;
-  color:var(--text) !important;
-  border-radius:14px !important;
-  outline:none;
-}
-input:focus, select:focus, textarea:focus{
-  border-color: rgba(var(--accentRGB), .38) !important;
-  box-shadow: 0 0 0 3px rgba(var(--accentRGB), .12) !important;
-}
-
-/* buttons: less-blue, premium glass */
-.btn, button, a.btn{
-  background: rgba(255,255,255,.06) !important;
-  border:1px solid rgba(255,255,255,.14) !important;
-  color:var(--text) !important;
-  box-shadow: 0 12px 34px rgba(0,0,0,.38) !important;
-}
-.btn:hover, button:hover, a.btn:hover{ filter: brightness(1.06); }
-.btn.primary, .btn.go{
-  border-color: rgba(var(--accentRGB), .22) !important;
-  background: rgba(255,255,255,.08) !important;
-}
-.btn.secondary, .btn.ghost{
-  background: rgba(0,0,0,.18) !important;
-}
-
-/* links */
-a{ color:inherit; }
-</style>
+<link rel="stylesheet" href="/assets/css/x.379127f7099b.css"/>
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -129,12 +31,12 @@ a{ color:inherit; }
   ]
 }
 </script>
-<script src="/assets/js/88st-analytics.js?v=VIP4_20260214_17"></script>
-<link href="/assets/88st-theme.css?v=VIP4_20260214_17" rel="stylesheet"/>
-<link href="/assets/88st-tool-history.css?v=VIP4_20260214_17" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-history-hub.js?v=VIP4_20260214_17"></script>
-<link href="/assets/88st-shell.css?v=VIP4_20260214_17" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=VIP4_20260214_17"></script>
+<script src="/assets/js/j.9179477b9417.js"></script>
+<link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
+<link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/>
+<script defer="" src="/assets/js/j.efba3509e62c.js"></script>
+<link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
+<script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
 </head>
 <body>
 <div class="wrap">
@@ -155,16 +57,7 @@ a{ color:inherit; }
     문의: <a href="https://t.me/UZU59" rel="noopener noreferrer" style="color:#45b3ff;text-decoration:none;font-weight:900" target="_blank">@UZU59</a>
 </div>
 </div>
-<script src="../assets/js/inline-bundles/b.dff6980afd.js"></script><style>
-  .rel-links{max-width:1080px;margin:26px auto 34px;padding:14px 14px 16px;border-radius:18px;
-    border:1px solid rgba(255,255,255,.10);background:linear-gradient(180deg,rgba(255,255,255,.05),rgba(255,255,255,.02));
-    box-shadow:0 14px 40px rgba(0,0,0,.35);}
-  .rel-links h2{margin:0 0 10px;font-size:13px;letter-spacing:.02em;color:rgba(245,226,122,.92);font-weight:900;}
-  .rel-grid{display:flex;flex-wrap:wrap;gap:8px;}
-  .rel-grid a{text-decoration:none;color:var(--text-2);font-size:12px;padding:8px 10px;border-radius:999px;
-    border:1px solid rgba(255,255,255,.10);background:rgba(0,0,0,.18);}
-  .rel-grid a:hover{border-color:rgba(245,226,122,.25);color:rgba(245,226,122,.92);}
-</style>
-<script src="/assets/js/p.025d649c8b.js" defer></script>
+<script src="../assets/js/inline-bundles/b.dff6980afd.js"></script>
+<script src="/assets/js/j.025d649c8b11.js" defer></script>
 </body>
 </html>
