--- a/cert/index.html
+++ b/cert/index.html
@@ -14,10 +14,10 @@
   <link rel="icon" type="image/png" href="/img/favicon.png"/>
   <link rel="canonical" href="https://88st.cloud/cert/"/>
 
-  <link rel="stylesheet" href="/assets/88st-cert.css?v=VIP4_20260214_17"/>
+  <link rel="stylesheet" href="/assets/c.c603748c04b2.css"/>
 
-  <script defer src="/assets/js/88st-shell.js?v=VIP4_20260214_17"></script>
-  <script defer src="/assets/js/88st-analytics.js?v=VIP4_20260214_17"></script>
+  <script defer src="/assets/js/j.8829a3ccde44.js"></script>
+  <script defer src="/assets/js/j.9179477b9417.js"></script>
 </head>
 <body>
   <main class="cert-wrap">
@@ -145,7 +145,7 @@
     </div>
   </div>
 
-  <script defer src="/assets/js/88st-cert.js?v=VIP4_20260214_17"></script>
+  <script defer src="/assets/js/j.64302c75fe3a.js"></script>
   <script type="application/ld+json">
   {
     "@context":"https://schema.org",
@@ -155,6 +155,6 @@
     "description":"안전한 토토사이트 선택을 돕는 인증사이트 모음. 가입코드/혜택/주의사항을 한 화면에서 확인하고, 즐겨찾기와 최근 기록으로 빠르게 재방문하세요."
   }
   </script>
-<script src="/assets/js/p.025d649c8b.js" defer></script>
+<script src="/assets/js/j.025d649c8b11.js" defer></script>
 </body>
 </html>
