--- a/casino-strategy/fibonacci/index.html
+++ b/casino-strategy/fibonacci/index.html
@@ -18,10 +18,10 @@
   <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
 
-  <link rel="stylesheet" href="/assets/88st-shell.css?v=VIP4_20260214_17"/>
-  <link rel="stylesheet" href="/assets/88st-theme.css?v=VIP4_20260214_17"/>
-  <script defer src="/assets/js/88st-shell.js?v=VIP4_20260214_17"></script>
-  <link rel="stylesheet" href="/assets/88st-strategy-landing.css?v=VIP4_20260214_17"/>
+  <link rel="stylesheet" href="/assets/c.a50dd3bc5b33.css"/>
+  <link rel="stylesheet" href="/assets/c.9995eeb5cf82.css"/>
+  <script defer src="/assets/js/j.8829a3ccde44.js"></script>
+  <link rel="stylesheet" href="/assets/c.40f97b2b9a20.css"/>
 
   <script type="application/ld+json">
   {
@@ -97,6 +97,6 @@
       </section>
     </div>
   </main>
-<script src="/assets/js/p.025d649c8b.js" defer></script>
+<script src="/assets/js/j.025d649c8b11.js" defer></script>
 </body>
 </html>
