--- a/casino/index.html
+++ b/casino/index.html
@@ -14,105 +14,8 @@
 <meta content="조건/주의사항/검증 포인트를 한 번에 정리했습니다." property="og:description"/>
 <meta content="https://88st.cloud/casino/" property="og:url"/>
 <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
-<style>
-*{box-sizing:border-box}
-:root{
-  /* Theme (auto/preset) */
-  --accent1:#d4af37;
-  --accent2:#f5e27a;
-  --accentRGB:212,175,55;
-  --accentText:#000;
-  --accentOn:#00121a;
 
-  /* Glass intensity */
-  --glassA:.84;
-  --glassStrongA:.94;
-  --glassSoftA:.26;
-  --glassBorder:rgba(255,255,255,.06);
-
-  /* Backward-compat */
-  --gold: var(--accent1);
-  --gold2: var(--accent2);
-
-  --bg:#f5f6f8; --panel:rgba(255,255,255,.92); --bd:rgba(18,20,28,.10);
---muted:#cfcfcf; --ok:#b7ffcf; --bad:#ffb3b3;
-}
-body{margin:0;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,system-ui;color:var(--text);
-  background:
-    radial-gradient(1200px 500px at 50% -10%, rgba(var(--accentRGB),.14), transparent 55%),
-    radial-gradient(900px 500px at 10% 20%, rgba(90,160,255,.08), transparent 60%),
-    linear-gradient(180deg, #07070a, var(--bg));}
-.notice-bar{position:sticky;top:0;z-index:1600;background:linear-gradient(135deg,var(--gold),var(--gold2));
-  color:#000;font-weight:900;font-size:13px;padding:10px 12px;text-align:center;box-shadow:0 10px 30px rgba(0,0,0,.35);}
-.notice-bar a{color:#000;text-decoration:none}
-#loader{position:fixed;inset:0;z-index:2000;background:
-  radial-gradient(900px 500px at 50% 30%, rgba(var(--accentRGB),.18), transparent 55%),
-  linear-gradient(180deg,#07070a,#0b0b0b);
-  display:flex;align-items:center;justify-content:center;flex-direction:column;gap:14px;}
-#loader .logoWrap{width:min(220px,60vw);aspect-ratio:1/1;display:flex;align-items:center;justify-content:center;
-  filter: drop-shadow(0 0 24px rgba(var(--accentRGB),.22));}
-#loader img{width:100%;height:100%;object-fit:contain;animation:pulse 1.4s ease-in-out infinite;}
-#loader .text{font-weight:900;letter-spacing:.6px;color:#e9e9e9;opacity:.85;font-size:13px;}
-@keyframes pulse{0%{transform:scale(1);opacity:.85}50%{transform:scale(1.03);opacity:1}100%{transform:scale(1);opacity:.85}}
-#loader.hide{opacity:0;pointer-events:none;transition:opacity .35s ease;}
-.scam-popup{position:fixed;inset:0;background:rgba(0,0,0,.75);display:none;align-items:center;justify-content:center;z-index:3000;padding:18px;}
-.scam-box{background:rgba(17,17,17,.95);border:1px solid var(--bd);border-radius:18px;padding:22px;width:100%;max-width:380px;text-align:center;
-  box-shadow:0 18px 60px rgba(0,0,0,.75);backdrop-filter: blur(10px);}
-.scam-box h3{color:#ff6b6b;margin:0 0 10px;font-weight:900}
-.scam-box p{font-size:13px;color:#ddd;line-height:1.55;margin:0}
-.scam-box .btn{margin-top:12px;padding:12px;border-radius:12px;background:linear-gradient(135deg,var(--gold),var(--gold2));color:#000;font-weight:900;cursor:pointer;user-select:none;}
-.header{text-align:center;padding:18px 0 10px;}
-.nav{display:flex;gap:8px;justify-content:center;flex-wrap:wrap;padding:0 14px 12px;}
-.nav a{color:#ddd;text-decoration:none;font-weight:900;font-size:12px;border:1px solid var(--bd);background:rgba(0,0,0,.25);padding:8px 10px;border-radius:999px;}
-.nav a.active{background:linear-gradient(135deg,var(--gold),var(--gold2));color:#111;border-color:transparent;}
-.logoLink{display:inline-flex;align-items:center;justify-content:center;text-decoration:none;}
-.logoImg{width:min(220px,62vw);height:auto;display:block;padding:10px;border-radius:18px;background:radial-gradient(120px 60px at 50% 40%, rgba(var(--accentRGB),.15), transparent 70%);
-  filter: drop-shadow(0 0 10px rgba(var(--accentRGB),.25)) drop-shadow(0 0 24px rgba(var(--accentRGB),.12));}
-.sub{font-size:12px;color:#9a9a9a;margin-top:6px;padding:0 14px;line-height:1.5;}
-.wrap{max-width:1100px;margin:0 auto;padding:10px 14px 28px}
-.grid2{display:grid;grid-template-columns:1fr 1fr;gap:14px;}
-@media(max-width:900px){.grid2{grid-template-columns:1fr}}
-.card{background:var(--panel);border:1px solid var(--bd);border-radius:18px;padding:14px;box-shadow:0 10px 26px rgba(0,0,0,.45);backdrop-filter: blur(10px);}
-.title{font-weight:900;font-size:14px;color:var(--gold2);margin-bottom:8px}
-.badge{display:inline-block;padding:4px 8px;border-radius:999px;font-size:11px;font-weight:900;color:#000;background:linear-gradient(135deg,var(--gold),var(--gold2));margin-right:6px;}
-.text{color:var(--muted);font-size:13px;line-height:1.55}
-.list{margin:10px 0 0;padding-left:18px;color:var(--muted);font-size:13px;line-height:1.6}
-.callout{border:1px solid var(--bd);background:rgba(0,0,0,.28);border-radius:16px;padding:12px;margin-top:10px}
-.kv{display:flex;justify-content:space-between;gap:10px;padding:8px 0;border-bottom:1px solid rgba(255,255,255,.06);font-size:13px}
-.kv:last-child{border-bottom:none}
-.k{color:#cfcfcf}
-.v{font-weight:900}
-.ok{color:var(--ok)}
-.bad{color:var(--bad)}
-.btnRow{display:flex;gap:10px;flex-wrap:wrap;margin-top:10px}
-.btn{flex:1;min-width:160px;padding:12px;border-radius:14px;border:none;font-weight:900;cursor:pointer;text-decoration:none;text-align:center}
-.btn.gold{background:linear-gradient(135deg,var(--gold),var(--gold2));color:#111}
-.btn.blue{background:linear-gradient(135deg,#1da1f2,#78d6ff);color:#00121a}
-.btn.dark{background:#1f1f1f;color:var(--text);border:1px solid rgba(255,255,255,.08)}
-.faq details{border:1px solid rgba(255,255,255,.08);background:rgba(0,0,0,.28);border-radius:14px;padding:10px 12px}
-.faq details + details{margin-top:10px}
-.faq summary{cursor:pointer;font-weight:900;color:var(--text);list-style:none}
-.faq summary::-webkit-details-marker{display:none}
-.faq .a{margin-top:8px;color:#cfcfcf;font-size:13px;line-height:1.55}
-.footer{text-align:center;color:#9a9a9a;font-size:12px;padding:18px 14px 26px}
-small.muted{color:#9a9a9a}
-
-/* 88 logo spotlight */
-.logoImg, .logo-img{
-  width:min(170px,52vw) !important;
-  height:auto;
-  display:block;
-  padding:10px;
-  border-radius:20px;
-  background:rgba(20,20,24,var(--glassSoftA));
-  border:1px solid rgba(255,255,255,.12);
-  box-shadow:0 0 0 1px rgba(255,255,255,.06), 0 14px 40px rgba(0,0,0,.42), 0 0 26px rgba(var(--accentRGB), .22);
-}
-@media(max-width:480px){
-  .logoImg, .logo-img{ width:min(150px,72vw) !important; padding:9px; }
-}
-
-</style>
+<link rel="stylesheet" href="/assets/css/x.ca5a4ba23b1a.css"/>
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -133,12 +36,12 @@ small.muted{color:#9a9a9a}
   ]
 }
 </script>
-<script src="/assets/js/88st-analytics.js"></script>
-<link href="/assets/88st-theme.css?v=VIP4_20260214_17" rel="stylesheet"/>
-<link href="/assets/88st-tool-history.css?v=VIP4_20260214_17" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-history-hub.js?v=VIP4_20260214_17"></script>
-<link href="/assets/88st-shell.css?v=VIP4_20260214_17" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=VIP4_20260214_17"></script>
+<script src="/assets/js/j.9179477b9417.js"></script>
+<link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
+<link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/>
+<script defer="" src="/assets/js/j.efba3509e62c.js"></script>
+<link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
+<script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
 </head>
 <body>
 <div class="scam-popup" id="scamPopup">
@@ -220,16 +123,7 @@ small.muted{color:#9a9a9a}
 </div>
 <div class="footer">© 88 Community · 안내/검증 정보는 운영 상황에 따라 변경될 수 있습니다.</div>
 </div>
-<script src="../assets/js/inline-bundles/b.eaed75994b.js"></script><style>
-  .rel-links{max-width:1080px;margin:26px auto 34px;padding:14px 14px 16px;border-radius:18px;
-    border:1px solid rgba(255,255,255,.10);background:linear-gradient(180deg,rgba(255,255,255,.05),rgba(255,255,255,.02));
-    box-shadow:0 14px 40px rgba(0,0,0,.35);}
-  .rel-links h2{margin:0 0 10px;font-size:13px;letter-spacing:.02em;color:rgba(245,226,122,.92);font-weight:900;}
-  .rel-grid{display:flex;flex-wrap:wrap;gap:8px;}
-  .rel-grid a{text-decoration:none;color:var(--text-2);font-size:12px;padding:8px 10px;border-radius:999px;
-    border:1px solid rgba(255,255,255,.10);background:rgba(0,0,0,.18);}
-  .rel-grid a:hover{border-color:rgba(245,226,122,.25);color:rgba(245,226,122,.92);}
-</style>
-<script src="/assets/js/p.025d649c8b.js" defer></script>
+<script src="../assets/js/inline-bundles/b.eaed75994b.js"></script>
+<script src="/assets/js/j.025d649c8b11.js" defer></script>
 </body>
 </html>
