--- a/tool-minigame/index.html
+++ b/tool-minigame/index.html
@@ -16,14 +16,14 @@
 <meta content="https://88st.cloud/tool-minigame/" property="og:url"/>
 <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
-<link href="/assets/88st-theme.css?v=VIP4_20260214_17" rel="stylesheet"/>
-<link href="/assets/88st-minigame-analyzer.css?v=VIP4_20260214_17" rel="stylesheet"/>
-<link href="/assets/88st-shell.css?v=VIP4_20260214_17" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=VIP4_20260214_17"></script>
-<script defer="" src="/assets/js/88st-minigame-analyzer.js?v=VIP4_20260214_17"></script>
+<link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
+<link href="/assets/c.b9ac867a4d9b.css" rel="stylesheet"/>
+<link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
+<script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
+<script defer="" src="/assets/js/j.0a9ef6920d9e.js"></script>
 
 <script src="../assets/js/inline-bundles/b.d7a7e748dd.js"></script>
-<script defer="" src="/assets/js/88st-analytics.js?v=VIP4_20260214_17"></script>
+<script defer="" src="/assets/js/j.9179477b9417.js"></script>
 <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -238,6 +238,6 @@
 </main>
 <div aria-atomic="true" aria-live="polite" class="mg-toast" id="mgToast"></div>
 
-<script src="/assets/js/p.025d649c8b.js" defer></script>
+<script src="/assets/js/j.025d649c8b11.js" defer></script>
 </body>
 </html>
