--- a/tool-casino/index.html
+++ b/tool-casino/index.html
@@ -16,14 +16,14 @@
 <meta content="https://88st.cloud/tool-casino/" property="og:url"/>
 <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
-<link href="/assets/88st-theme.css?v=VIP4_20260214_17" rel="stylesheet"/>
-<link href="/assets/88st-casino-strategies.css?v=VIP4_20260214_17" rel="stylesheet"/>
-<link href="/assets/88st-shell.css?v=VIP4_20260214_17" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=VIP4_20260214_17"></script>
-<script defer="" src="/assets/js/88st-casino-strategies.js?v=VIP4_20260214_17"></script>
+<link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
+<link href="/assets/c.43df7d0713c1.css" rel="stylesheet"/>
+<link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
+<script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
+<script defer="" src="/assets/js/j.c471c3193855.js"></script>
 
 <script src="../assets/js/inline-bundles/b.cba5ff41a7.js"></script>
-<script defer="" src="/assets/js/88st-analytics.js?v=VIP4_20260214_17"></script>
+<script defer="" src="/assets/js/j.9179477b9417.js"></script>
 <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -200,6 +200,6 @@
 </div>
 </section>
 </main>
-<script src="/assets/js/p.025d649c8b.js" defer></script>
+<script src="/assets/js/j.025d649c8b11.js" defer></script>
 </body>
 </html>
