--- a/cert/index.html
+++ b/cert/index.html
@@ -11,7 +11,8 @@
   <meta property="og:description" content="안전한 토토사이트 선택을 돕는 인증사이트 모음. 가입코드/혜택/주의사항을 한 화면에서 확인하세요."/>
   <meta property="og:type" content="website"/>
   <meta property="og:image" content="/img/logo.png"/>
-  <link rel="icon" type="image/png" href="/img/favicon.png"/>
+  <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
   <link rel="canonical" href="https://88st.cloud/cert/"/>
 
   <link rel="stylesheet" href="/assets/c.c603748c04b2.css"/>
