--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <title>88st.cloud | 스포츠 배당 분석기 · 미니게임 · 카지노 전략 · 슬롯 환수율(RTP) 분석기 · 마진/EV · 먹튀검증 안전놀이터</title>
 <meta content="88 — 스포츠 배당/마진(EV 포함) 분석기, 미니게임 분석기, 카지노 전략 분석기, 슬롯(RTP·변동성) 분석기를 한 곳에서. 인증/보증 정보와 함께 빠르게 확인하세요." name="description"/>
-<meta content="스포츠 분석기, 스포츠 배당 분석기, 배당 마진 계산기, 오버라운드, EV 계산기, 공정배당, 보증사이트, 인증사이트, 먹튀검증, 카지노 전략 분석기, 미니게임 분석기, 슬롯 환수율(RTP) 분석기, 슬롯 분석기, 슬롯 RTP, 슬롯 변동성" name="keywords">
+<meta content="스포츠 분석기, 스포츠 배당 분석기, 배당 마진 계산기, 오버라운드, EV 계산기, 공정배당, 보증사이트, 인증사이트, 먹튀검증, 카지노 전략 분석기, 미니게임 분석기, 슬롯 환수율(RTP) 분석기, 슬롯 분석기, 슬롯 RTP, 슬롯 변동성" name="keywords"/>
 <link href="https://88st.cloud/" rel="canonical"/>
 <meta content="index,follow" name="robots"/>
 
@@ -21,7 +21,7 @@
 
 
 <link rel="stylesheet" href="/assets/css/x.9d7841e705c5.css"/>
-<script src="assets/js/inline-bundles/b.fa5e828602.js"></script>
+<script src="/assets/js/inline-bundles/b.fa5e828602.js"></script>
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -61,12 +61,12 @@
   ]
 }
 </script>
-<link href="assets/c.a693fe39b0c5.css" rel="stylesheet"/>
+<link href="/assets/c.a693fe39b0c5.css" rel="stylesheet"/>
 <script src="/assets/js/j.9179477b9417.js"></script>
 <link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
 <link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
-</meta><link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
+<link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
 </head>
 <body>
